# pyseekdb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/rag/: .env.example  README.md  README_CN.md  pyproject.toml  seekdb_app.py  seekdb_insert.py  seekdb_utils.py
pyseekdb/: __init__.py
pyseekdb/client/: __init__.py  admin_client.py  client_base.py  client_oceanbase_server.py  client_seekdb_embedded.py  client_seekdb_server.py  collection.py  filters.py  sqlalchemy_client.py
pyseekdb/examples/: complete_example.py  comprehensive_example.py  simple_example.py
pyseekdb/tests/: test_admin_database_management.py  test_client_creation.py  test_collection_dml.py  test_collection_embedding_function.py  test_collection_get.py  test_collection_hybrid_search.py  test_collection_query.py  test_default_embedding_function.py  test_offical_case.py  test_user_defined_embedding_function.py
seekdbclient/: __init__.py
seekdbclient/client/: admin_client.py  client_base.py  client_seekdb_embedded.py  collection.py  sql_based_collection_operator.py
seekdbclient/examples/: comprehensive_example.py  simple_example.py
seekdbclient/tests/: test_admin_database_management.py  test_client_creation.py  test_collection_dml.py  test_collection_embedding_function.py  test_collection_get.py  test_collection_hybrid_search.py  test_collection_query.py  test_default_embedding_function.py  test_user_defined_embedding_function.py
src/pyseekdb/client/: __init__.py  client.py
