[project]
name = "seekdb-rag-demo"
version = "0.1.0"
description = "seekdb RAG Demo with Streamlit - Vector search and retrieval-augmented generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyseekdb>=1.0.0b5",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0"
]

[tool.uv]
dev-dependencies = []
