[project]
name = "seekdb-rag-demo"
version = "0.1.0"
description = "seekdb RAG Demo with Streamlit - Vector search and retrieval-augmented generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyseekdb>=1.0.0b5",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.0.0",
    "huggingface-hub>=0.34.0,<1.0",
]

[tool.uv]
dev-dependencies = []
